# alcheminer-cpp

./: .gitignore  CMakeLists.txt  README.md  plugins.cfg  shade_compile.sh
src/: AlchDevice.cpp  AlchPipeline.cpp  AlchPipeline.h  AlchSwapChain.cpp  AlchSwapChain.h  AlchWindow.cpp  AlchWindow.h  app.cpp  app.h  glad.c  main.cpp  rlFPCamera.h
src/AlchemyEngine/: AlchDevice.cpp  AlchDevice.h  AlchPipeline.cpp  AlchPipeline.h  AlchSwapChain.cpp  AlchSwapChain.h  AlchWindow.h
src/Engine/: engine.cpp  engine.h  renderer.cpp  renderer.h
src/include/glad/: glad.h
src/shaders/: MarchingCubes.glsl  common.glsl  simple.frag  simple.vert  triangle_table.glsl
